--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -68,11 +68,18 @@
                             </li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                Reportes 
+                                Informes 
                                 <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="{{path('minor_book')}}">Libro Menor</a></li>
+                                    <li><a href="{{path('minor_book')}}">Libro Diario</a></li>
                                     <li><a href="{{path('mayor_book')}}">Libro Mayor</a></li>
+                                    <li><a href="#actualizar">Libro Caja *</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="#actualizar">Balance Tributario *</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="#actualizar">Libro de balance Tributario *</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="#actualizar">Balance General Clasificado *</a></li>
                                 </ul>
                             </li>
                         {% endif %}
